Fix shadow position in standalone toolbar
Was causing horizontal scrollbar to appear when not floated.

Removed question about what border-top does, at it obviously clears the
top border when floating the toolbar in standalone.

--- a/modules/ve/ui/styles/ve.ui.Toolbar.css
+++ b/modules/ve/ui/styles/ve.ui.Toolbar.css
@@ -5,11 +5,15 @@
  * @license The MIT License (MIT); see LICENSE.txt
  */
 
+.oo-ui-toolbar-bar {
+	position: relative;
+}
+
 .ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
 	position: fixed;
 	top: 0;
 	z-index: 100;
-	border-top: none; /* TODO: Do we need this? What does it reset? */
+	border-top: none;
 }
 
 .ve-ui-toolbar-floating .oo-ui-toolbar-shadow {
